# pyspcwebgw

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml  release.yml
examples/: example1.py
pyspcwebgw/: __init__.py  area.py  const.py  utils.py  websocket.py  zone.py
scripts/: spcwebgw-console
tests/: test_area.py  test_spc.py  test_zone.py
