[tool.poetry]
name = "pyspcwebgw"
version = "0.6.0"
description = "A Python library for communicating with SPC Web Gateway."
authors = ["Martin Berg", "Jakob Schlyter <jakob@kirei.se>"]
license = "MIT"
readme = "README.md"
keywords=["spc", "vanderbilt", "web gateway"]
classifiers = [
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Topic :: Home Automation',
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.4"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]

[tool.flake8]
exclude = [
    ".venv",
    ".git",
    ".tox",
    "docs",
    "venv",
    "bin",
    "lib",
    "deps",
    "build",
]
