[tool.poetry]
name = "pyspcwebgw"
version = "0.7.0"
description = "A Python library for communicating with SPC Web Gateway."
authors = ["Martin Berg", "Jakob Schlyter <jakob@kirei.se>"]
license = "MIT"
readme = "README.md"
keywords=["spc", "vanderbilt", "web gateway"]
classifiers = [
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Topic :: Home Automation',
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.4"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
flake8 = "^6.0.0"
pylama = {version = "^8.4.1", extras=["toml"]}
flake8-pyproject = "^1.2.2"
black = "^22.12.0"
isort = "^5.12.0"
pytest-isort = "^3.1.0"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest]
testpaths = ["tests"]

[tool.pylama]
format = "pylint"
ignore = "W0611,C901"
skip = ".venv/*"

[tool.flake8]
exclude = [".venv"]
