[project]
name = "pyspcwebgw"
dynamic = ["version"]
description = "A Python library for communicating with SPC Web Gateway."
authors = [
    {name="Martin Berg"},
    {name="Jakob Schlyter", email = "jakob@kirei.se"}
]
license = "MIT"
readme = "README.md"
keywords=["spc", "vanderbilt", "web gateway"]
requires-python = ">=3.11,<4.0"
classifiers = [
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Topic :: Home Automation',
]
dependencies = [
    "aiohttp>=3.8.3"
]

[project.urls]
repository = "https://github.com/pyspcwebgw/pyspcwebgw.git"
issues = "https://github.com/pyspcwebgw/pyspcwebgw/issues"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pytest>=9",
    "pytest-asyncio>=1.3.0",
    "pytest-ruff>=0.5",
    "ruff>=0.14.5",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["SIM114", "E501", "UP032", "UP041", "SIM108"]
